# ryzelang

./: .gitignore  Cargo.toml  LICENSE.MD  README.md
crates/ryzelang-cli/: Cargo.toml
crates/ryzelang-cli/src/: main.rs
crates/ryzelang-core/: Cargo.toml
crates/ryzelang-core/src/: interpreter.rs  lib.rs
crates/ryzelang-ls/: Cargo.toml
crates/ryzelang-ls/src/: main.rs
crates/tree-sitter-ryze/: Cargo.toml  build.rs
crates/tree-sitter-ryze/src/: lib.rs
docs/: architecture.md  formal_grammar.md  getting_started.md  language_server.md  language_specification.md  reference.md  testing_guide.md
examples/: countdown.ryze  hello_world.ryze  hello_world_no_warp.ryze
tests/: control_flow.ryze  control_flow.ryze.exp  invalid_combo.ryze  invalid_combo.ryze.exp  io.ryze  io.ryze.exp  logic_flux.ryze  logic_flux.ryze.exp  math.ryze  math.ryze.exp  stack_ops.ryze  stack_ops.ryze.exp  test.ryze  test_combo.ryze  test_combo.ryze.exp  test_error.ryze  test_error.ryze.exp  test_illegal_store.ryze  test_illegal_store.ryze.exp  test_qwe_combo.ryze  test_qwe_combo.ryze.exp  test_weq.ryze  test_weq.ryze.exp
tree-sitter-ryze/: grammar.js
tree-sitter-ryze/queries/: highlights.scm
tree-sitter-ryze/src/: grammar.json  node-types.json  parser.c
vscode-ryzelang/: README.md  language-configuration.json  package.json  tsconfig.json
vscode-ryzelang/src/: extension.ts
vscode-ryzelang/syntaxes/: ryze.tmLanguage.json
