[package]
name = "ryzelang-ls"
version = "0.1.0"
edition = "2021"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1.0", features = ["full"] }
ryzelang-core = { path = "../ryzelang-core" }
tree-sitter = "0.20"
tree-sitter-ryze = { path = "../tree-sitter-ryze" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.0" # Thread-safe hashmap for document storage
